--- a/public/service/search-engine-optimization/index.html
+++ b/public/service/search-engine-optimization/index.html
@@ -153,64 +153,80 @@
                             <div class="work-right">
                                 <div class="heading-intro less-margin">
                                     <div>
-                                        <h1 class="less-top-margin">Website Design</h1>
+                                        <h1 class="less-top-margin">SEO Services</h1>
                                         <div class="paragraph-box">
-                                            <p>Build a unique Website with Sapiens Webflow Template</p>
+                                            <p>Build a unique Website with DigiPants' Expertise</p>
                                         </div>
                                     </div>
                                     <div class="divider-line"></div>
                                 </div>
                                 <div class="bottom-margin w-richtext">
                                     <h3>Overview</h3>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                        doloremque
-                                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-                                        quasi
-                                        architecto beatae vitae dicta sunt explicabo.</p>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
-                                        quia
-                                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                    <p>Ellentesque sit amet odio nisi. Phasellus quis lorem leo. s, libero diam finibus
-                                        tellus,
-                                        at sagittis tellus eros vitae nisi. Sed dignissim augue sit amet diam laoreet
-                                        venenatis.
-                                        Aliquam bibendum erat eu nisi faucibus dignissim. Phasellus dignissim est tempor
-                                        eros
-                                        pulvinar luctus. Nam vulputate, risus a efficitur cursus, felis dolor vulputate
-                                        mi, ac
-                                        eleifend libero velit sed nunc.</p>
-                                    <h3>The Process</h3>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                        doloremque
-                                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-                                        quasi
-                                        architecto beatae vitae dicta sunt explicabo.</p>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
-                                        quia
-                                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                    <p>Ellentesque sit amet odio nisi. Phasellus quis lorem leo. s, libero diam finibus
-                                        tellus,
-                                        at sagittis tellus eros vitae nisi. Sed dignissim augue sit amet diam laoreet
-                                        venenatis.
-                                        Aliquam bibendum erat eu nisi faucibus dignissim. Phasellus dignissim est tempor
-                                        eros
-                                        pulvinar luctus. Nam vulputate, risus a efficitur cursus, felis dolor vulputate
-                                        mi, ac
-                                        eleifend libero velit sed nunc.</p>
-                                    <h3>The End</h3>
-                                    <p>Sed in justo ac leo sodales suscipit. Etiam rhoncus porta massa a volutpat.
-                                        Vestibulum
-                                        ultrices sollicitudin eleifend.</p>
-                                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                                        adipisci
-                                        velit, sed quia non numquam eius modi tempora inciduntCurabitur euismod
-                                        pellentesque
-                                        dapibus. Maecenas a pretium odio. Morbi porta congue tempus. Donec consequat
-                                        condimentum
-                                        ligula, id dapibus lorem tincidunt non.</p>
-                                    <p>Ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam,
-                                        quis
-                                        nostrum exercitationem ullam corporis suscipit.</p>
+                                    <p>
+                                        At DigiPants, we offer comprehensive SEO services that drive your online visibility and propel your business to
+                                        new heights. Our team of experienced experts works diligently to ensure your website not only ranks higher but
+                                        also attracts the right audience, resulting in increased traffic, conversions, and business growth.
+                                    </p>
+                                
+                                    <h3>The Process:</h3>
+                                    <p>
+                                        <strong>1. Keyword Research and Analysis:</strong>
+                                        We kickstart our SEO process with in-depth keyword research, identifying the most relevant and high-converting
+                                        keywords for your industry. By understanding your target audience's search behavior, we lay the foundation for a
+                                        strategic SEO campaign.
+                                    </p>
+                                    <p>
+                                        <strong>2. On-Page Optimization:</strong>
+                                        Our experts optimize every aspect of your website's on-page elements, including meta tags, headings, content,
+                                        and images. This ensures that search engines can accurately understand and index your web pages, boosting their
+                                        search visibility.
+                                    </p>
+                                    <p>
+                                        <strong>3. Technical SEO Audit:</strong>
+                                        Our thorough technical audit identifies and rectifies any technical issues that might hinder search engines from
+                                        crawling and indexing your website effectively. This includes addressing site speed, mobile-friendliness, and
+                                        overall site structure.
+                                    </p>
+                                    <p>
+                                        <strong>4. Content Strategy:</strong>
+                                        High-quality content is the backbone of successful SEO. Our team creates engaging and informative content that
+                                        not only resonates with your audience but also positions you as an authority in your industry. This content is
+                                        optimized for both search engines and user experience.
+                                    </p>
+                                    <p>
+                                        <strong>5. Link Building and Outreach:</strong>
+                                        Building authoritative and relevant backlinks is crucial for SEO success. We engage in strategic link-building
+                                        practices that establish your website's credibility, driving organic traffic and improving search rankings.
+                                    </p>
+                                    <p>
+                                        <strong>6. Local SEO:</strong>
+                                        For businesses targeting local markets, our local SEO strategies optimize your online presence for
+                                        geographically relevant searches. This includes optimizing Google My Business profiles, local directory
+                                        listings, and location-specific content.
+                                    </p>
+                                
+                                    <h3>The Result:</h3>
+                                    <p>
+                                        <strong>1. Increased Organic Traffic:</strong>
+                                        Through our holistic SEO approach, you'll experience a significant boost in organic traffic. Your website will
+                                        rank higher for targeted keywords, attracting users who are actively searching for your products or services.
+                                    </p>
+                                    <p>
+                                        <strong>2. Improved Conversion Rates:</strong>
+                                        Our focus on attracting the right audience means that the traffic your website receives is more likely to
+                                        convert into leads or customers. This translates into improved ROI for your digital marketing efforts.
+                                    </p>
+                                    <p>
+                                        <strong>3. Enhanced Brand Visibility:</strong>
+                                        As your website climbs search engine rankings, your brand's visibility and recognition also increase. This
+                                        builds trust among users, positioning your business as a credible and trustworthy choice within your industry.
+                                    </p>
+                                    <p>
+                                        <strong>4. Long-Term Results:</strong>
+                                        Our strategic and ethical SEO practices lay the foundation for sustained success. While SEO is an ongoing
+                                        process, the results we achieve provide lasting benefits that continue to generate organic traffic and leads
+                                        over time.
+                                    </p>
                                     <p>Image by <a
                                             href="https://unsplash.com/es/colecciones/soRFjAdkiPQ/sapiens-webflow-template"
                                             target="_blank">Credit</a></p>
