--- a/public/service/social-media/index.html
+++ b/public/service/social-media/index.html
@@ -164,55 +164,71 @@
                                 </div>
                                 <div class="bottom-margin w-richtext">
                                     <h3>Overview</h3>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                        doloremque
-                                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-                                        quasi
-                                        architecto beatae vitae dicta sunt explicabo.</p>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
-                                        quia
-                                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                    <p>Ellentesque sit amet odio nisi. Phasellus quis lorem leo. s, libero diam finibus
-                                        tellus,
-                                        at sagittis tellus eros vitae nisi. Sed dignissim augue sit amet diam laoreet
-                                        venenatis.
-                                        Aliquam bibendum erat eu nisi faucibus dignissim. Phasellus dignissim est tempor
-                                        eros
-                                        pulvinar luctus. Nam vulputate, risus a efficitur cursus, felis dolor vulputate
-                                        mi, ac
-                                        eleifend libero velit sed nunc.</p>
-                                    <h3>The Process</h3>
-                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                                        doloremque
-                                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-                                        quasi
-                                        architecto beatae vitae dicta sunt explicabo.</p>
-                                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
-                                        quia
-                                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                    <p>Ellentesque sit amet odio nisi. Phasellus quis lorem leo. s, libero diam finibus
-                                        tellus,
-                                        at sagittis tellus eros vitae nisi. Sed dignissim augue sit amet diam laoreet
-                                        venenatis.
-                                        Aliquam bibendum erat eu nisi faucibus dignissim. Phasellus dignissim est tempor
-                                        eros
-                                        pulvinar luctus. Nam vulputate, risus a efficitur cursus, felis dolor vulputate
-                                        mi, ac
-                                        eleifend libero velit sed nunc.</p>
-                                    <h3>The End</h3>
-                                    <p>Sed in justo ac leo sodales suscipit. Etiam rhoncus porta massa a volutpat.
-                                        Vestibulum
-                                        ultrices sollicitudin eleifend.</p>
-                                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-                                        adipisci
-                                        velit, sed quia non numquam eius modi tempora inciduntCurabitur euismod
-                                        pellentesque
-                                        dapibus. Maecenas a pretium odio. Morbi porta congue tempus. Donec consequat
-                                        condimentum
-                                        ligula, id dapibus lorem tincidunt non.</p>
-                                    <p>Ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam,
-                                        quis
-                                        nostrum exercitationem ullam corporis suscipit.</p>
+                                    <p>
+                                        DigiPants offers comprehensive Social Media Marketing services designed to elevate your brand's online presence
+                                        and engage your target audience effectively. Our seasoned experts craft tailored strategies that not only
+                                        increase your brand's visibility but also drive meaningful interactions, conversions, and business growth.
+                                    </p>
+                                
+                                    <h3>The Process:</h3>
+                                    <p>
+                                        <strong>1. Audience Analysis:</strong>
+                                        We begin by analyzing your target audience to gain insights into their preferences, behaviors, and demographics.
+                                        This helps us create content that resonates with your audience and sparks engagement.
+                                    </p>
+                                    <p>
+                                        <strong>2. Content Creation and Curation:</strong>
+                                        Our team develops engaging and relevant content that aligns with your brand's identity and resonates with your
+                                        audience. We curate a mix of media, including images, videos, and articles, to maintain a consistent and
+                                        captivating presence.
+                                    </p>
+                                    <p>
+                                        <strong>3. Platform Selection:</strong>
+                                        Based on your business goals and target audience, we carefully choose the social media platforms that are most
+                                        suitable for your brand. This ensures maximum reach and engagement with your potential customers.
+                                    </p>
+                                    <p>
+                                        <strong>4. Social Advertising:</strong>
+                                        We leverage targeted social media advertising campaigns to expand your brand's reach and attract new followers.
+                                        Our campaigns are optimized for conversion, driving traffic to your website or landing pages.
+                                    </p>
+                                    <p>
+                                        <strong>5. Community Engagement:</strong>
+                                        Building a strong community around your brand is essential. We engage with your audience, respond to comments,
+                                        and encourage discussions to foster genuine connections and brand loyalty.
+                                    </p>
+                                    <p>
+                                        <strong>6. Performance Analytics:</strong>
+                                        Our data-driven approach includes regular monitoring and analysis of key performance metrics. We measure
+                                        engagement, reach, conversion rates, and other KPIs to refine our strategies for optimal results.
+                                    </p>
+                                
+                                    <h3>The Result:</h3>
+                                    <p>
+                                        <strong>1. Enhanced Brand Engagement:</strong>
+                                        Through our strategic approach, you'll witness increased engagement levels across your social media platforms.
+                                        Meaningful interactions with your audience will result in higher brand loyalty and stronger relationships.
+                                    </p>
+                                    <p>
+                                        <strong>2. Increased Website Traffic:</strong>
+                                        Our social media efforts are aimed at driving targeted traffic to your website. This results in more leads,
+                                        conversions, and potential customers exploring your products or services.
+                                    </p>
+                                    <p>
+                                        <strong>3. Improved Brand Awareness:</strong>
+                                        As your brand gains traction across social media channels, your online visibility and brand awareness will
+                                        significantly improve. Your business will be recognized and trusted by a broader audience.
+                                    </p>
+                                    <p>
+                                        <strong>4. Measurable ROI:</strong>
+                                        Our performance analytics provide you with clear insights into the effectiveness of our strategies. You'll have
+                                        a measurable return on investment, making it easier to gauge the impact of your social media efforts.
+                                    </p>
+                                    <p>
+                                        <strong>5. Long-Term Partnerships:</strong>
+                                        Our commitment to sustained growth means building enduring relationships with our clients. We're dedicated to
+                                        being your trusted partner in navigating the dynamic world of social media marketing.
+                                    </p>
                                     <p>Image by <a
                                             href="https://unsplash.com/es/colecciones/soRFjAdkiPQ/sapiens-webflow-template"
                                             target="_blank">Credit</a></p>
@@ -255,8 +271,7 @@
                                         class="change-hover-image"></div>
                                 </a></div>
                             <div class="service-bottom-box">
-                                <div><a href="/service/search-engine-optimization" class="peview-link">Website
-                                        Design</a>
+                                <div><a href="/service/search-engine-optimization" class="peview-link">SEO Services</a>
                                     <div class="paragraph-box _5-pixels">
                                         <p>Build a unique Website with Sapiens Webflow Template</p>
                                     </div>
