--- a/src/service/web-development.html
+++ b/src/service/web-development.html
@@ -153,7 +153,7 @@
                             <div class="work-right">
                                 <div class="heading-intro less-margin">
                                     <div>
-                                        <h1 class="less-top-margin">Web Development</h1>
+                                        <h1 class="less-top-margin">Web Design and Development</h1>
                                         <div class="paragraph-box">
                                             <p>Build a unique Website with DigiPants' skilled developers</p>
                                         </div>
@@ -162,35 +162,70 @@
                                 </div>
                                 <div class="bottom-margin w-richtext">
                                     <h3>Overview</h3>
-                                    <p>Your website is the center of your digital presence. It's one of the few places
-                                        on the internet where you can deliver
-                                        your brand's message free of distortion or distraction. DigiPants' web
-                                        development services are perfect for brands at
-                                        any stage.</p>
-                                    <h3>The Process</h3>
-                                    <p>Our web development team can help you build your brand's website from the ground
-                                        up. We specialize in building websites
-                                        that tell a unique brand story while meeting the expectations of today's most
-                                        discerning consumers.</p>
-                                    <p>If your website is already built but isn't performing to expectations, we can
-                                        perform a detailed audit and work with you to improve site
-                                        architecture, design, and responsiveness.</p>
-                                    <h3>Result</h3>
-                                    <p>The websites we produce are clean and fresh, each uniquely designed and tested in
-                                        the most commonly used browsers at
-                                        different screen resolutions.</p>
-                                    <p>Some of the features will include;</p>
-                                    <h6>1 Year Premium Support</h6>
-                                    <p>Analytics</p>
-                                    <p>Contact Management</p>
-                                    <p>Member Login</p>
-                                    <p>Social Tools</p>
-                                    <p>SSL Certified</p>
-                                    <p>Chat box</p>
-                                    <p>Bookings- Bookings 24/7, Get Paid Online, Private & Group Services, Google
-                                        Calendar Sync, Auto-Email Reminders.</p>
-                                    <p>Blogs - Manage Your Blog, Add Multiple Writers.</p>
-                                    <p>Events- Stunning Invitations, Guest List, Ticket Sales.</p>
+                                    <p>
+                                        DigiPants offers comprehensive Web Design and Development services that bring your digital vision to life. Our
+                                        expert team combines cutting-edge design with advanced development techniques to create websites that are not
+                                        only visually stunning but also highly functional, user-friendly, and tailored to your brand's identity.
+                                    </p>
+                                
+                                    <h4>The Process:</h4>
+                                    <p>
+                                        <strong>1. Discovery and Planning:</strong>
+                                        We start by understanding your business goals, target audience, and project requirements. This lays the
+                                        groundwork for a strategic plan that guides the entire design and development process.
+                                    </p>
+                                    <p>
+                                        <strong>2. Creative Design:</strong>
+                                        Our designers craft visually appealing and user-centric designs that align with your brand. We ensure a seamless
+                                        user experience, intuitive navigation, and attention to detail that resonates with your audience.
+                                    </p>
+                                    <p>
+                                        <strong>3. Front-End Development:</strong>
+                                        Our developers bring the designs to life with clean, responsive front-end development. We optimize the user
+                                        interface for various devices, ensuring a consistent and engaging experience across all platforms.
+                                    </p>
+                                    <p>
+                                        <strong>4. Back-End Development:</strong>
+                                        Our back-end experts build the functionalities that power your website. We integrate databases, user management
+                                        systems, e-commerce platforms, and more, tailored to your specific needs.
+                                    </p>
+                                    <p>
+                                        <strong>5. Testing and Quality Assurance:</strong>
+                                        We rigorously test every aspect of your website to ensure it functions flawlessly. This includes cross-browser
+                                        compatibility, responsive design, load times, and functionality testing.
+                                    </p>
+                                    <p>
+                                        <strong>6. Launch and Optimization:</strong>
+                                        Once your website is ready, we ensure a smooth launch. We continue to monitor performance and gather user
+                                        feedback, making iterative improvements to optimize user experience and performance.
+                                    </p>
+                                
+                                    <h4>The Result:</h4>
+                                    <p>
+                                        <strong>1. Professional Online Presence:</strong>
+                                        Our websites exude professionalism and credibility, making a strong first impression on visitors and potential
+                                        customers.
+                                    </p>
+                                    <p>
+                                        <strong>2. Enhanced User Experience:</strong>
+                                        Our user-centric designs and intuitive navigation result in a seamless and engaging experience for your website
+                                        visitors.
+                                    </p>
+                                    <p>
+                                        <strong>3. Increased Conversions:</strong>
+                                        A combination of compelling design, user-friendly interface, and optimized functionality contributes to higher
+                                        conversion rates and better business outcomes.
+                                    </p>
+                                    <p>
+                                        <strong>4. Mobile Responsiveness:</strong>
+                                        Our responsive designs ensure that your website looks and functions perfectly across a wide range of devices,
+                                        improving accessibility and user satisfaction.
+                                    </p>
+                                    <p>
+                                        <strong>5. Ongoing Growth:</strong>
+                                        Our post-launch optimization ensures that your website remains up-to-date, responsive to user needs, and aligned
+                                        with evolving industry trends.
+                                    </p>
                                     <p>Image by <a href="#" target="_blank">Credit</a></p>
                                 </div>
                                 <div class="contact-support">
